PROJECT(WriteBench)

SET(MYLIB ${PROJECT_SOURCE_DIR}/lib/libmysql.lib)

FIND_FILE(MYDLL NAMES libmysql.dll PATHS ${PROJECT_SOURCE_DIR}/lib)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

FILE(COPY ${MYDLL} DESTINATION ${EXECUTABLE_OUTPUT_PATH})

ADD_SUBDIRECTORY(run)

ADD_SUBDIRECTORY(prepare)

ADD_SUBDIRECTORY(run_console)

